# algorand

./: .gitignore  README.md  common.sh  create.sh  env.fish  reset.sh
privnet/: README.md  accounts_list.sh  net_create.sh  net_delete.sh  net_start.sh  net_status.sh  net_stop.sh
smart_contracts/: README.md
smart_contracts/crowdfunding/: README.md
smart_contracts/crowdfunding/crowdfunding-goal/: README.md  main.sh
smart_contracts/simple/: README.md  main.sh  out.txn  setup.sh
smart_contracts/simple-rust/: Cargo.toml
smart_contracts/simple-rust/src/: main.rs
smart_contracts/simple/simple-go/: go.mod  go.sum  main.go  passphrase.teal
smart_contracts/simple/simple-goal/: README.md  main.sh
smart_contracts/simple/simple-python/: .gitignore  README.md  main.py  requirements.txt
smart_contracts/simple/simple-rust/: Cargo.toml  README.md
smart_contracts/simple/simple-rust/src/: main.rs
src/: common.sh  generate_partkey.sh  net_start.sh  net_status.sh  net_stop.sh
testnet/: asset_create.sh  asset_opt-in.sh  asset_send.sh  generate_partkey.sh  net_start.sh  net_status.sh  net_stop.sh  swaplink.md  test.key  test.pub  wallet_create.sh  wallet_list.sh
util/: make_lsig_pw.py
