[package]
name = "simple-rust"
version = "0.1.0"
authors = ["Steven Pequeno <steven@pequeno.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algonaut_client = "0.2.0"
algonaut_core = "0.2.0"
algonaut_crypto = "0.2.0"
algonaut_encoding = "0.2.0"
algonaut_transaction = "0.2.0"