[package]
name = "simple-rust"
version = "0.1.0"
authors = ["Steven Pequeno <steven@pequeno.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algonaut_client = { path = "/home/steven/code/algonaut/algonaut_client" }
algonaut_core = { path = "/home/steven/code/algonaut/algonaut_core" }
algonaut_crypto = { path = "/home/steven/code/algonaut/algonaut_crypto" }
algonaut_encoding = { path = "/home/steven/code/algonaut/algonaut_encoding" }
algonaut_transaction = { path = "/home/steven/code/algonaut/algonaut_transaction" }
algonaut = { path = "/home/steven/code/algonaut" }
data-encoding = "2.3.1"
rmp-serde = "0.15"
tokio = { version = "1.6.0", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"